configs/kube-system/registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: registry
  namespace: kube-system
  labels:
    addonmanager.kubernetes.io/mode: "Reconcile"
    kubernetes.io/cluster-service: "true"
    kubernetes.io/name: "Registry"
spec:
  ports:
    - name: registry
      port: 5000
      targetPort: 5000
  selector:
    component: registry
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry
  namespace: kube-system
  labels:
    component: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      component: registry
  template:
    metadata:
      labels:
        component: registry
        access-registry: "1"
    spec:
      containers:
        - name: registry
          image: registry:2
          ports:
            - containerPort: 5000
          volumeMounts:
            - mountPath: /var/lib/registry
              name: persistent-volume
              subPath: registry/data
            - mountPath: /etc/docker/registry
              name: registry-config
      volumes:
        - name: persistent-volume
          persistentVolumeClaim:
            claimName: registry-data
        - name: registry-config
          secret:
            secretName: registry-config
            items:
              - key: config
                path: config.yml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: access-registry
  namespace: kube-system
spec:
  podSelector:
    matchLabels:
      component: registry
  ingress:
    - from:
        - namespaceSelector: {}
  egress:
    - to:
        - namespaceSelector: {}
